--- a/lints/csharp/.editorconfig
+++ b/lints/csharp/.editorconfig
@@ -72,7 +72,7 @@ dotnet_diagnostic.CA1505.severity = error
 dotnet_diagnostic.CA1506.severity = error
 dotnet_diagnostic.CA1508.severity = error
 dotnet_diagnostic.CA1012.severity = error
-dotnet_diagnostic.CA1031.severity = silent
+dotnet_diagnostic.CA1031.severity = error
 dotnet_diagnostic.CA1068.severity = error
 dotnet_diagnostic.CA1827.severity = error
 dotnet_diagnostic.CA1828.severity = error
@@ -105,6 +105,45 @@ dotnet_style_qualification_for_property = false:silent
 dotnet_style_qualification_for_field = false:silent
 dotnet_style_qualification_for_method = false:silent
 dotnet_style_qualification_for_event = false:silent
+dotnet_diagnostic.CA1069.severity = error
+dotnet_diagnostic.CA2007.severity = silent
+dotnet_diagnostic.CA2012.severity = error
+dotnet_diagnostic.CA3001.severity = error
+dotnet_diagnostic.CA2100.severity = error
+dotnet_diagnostic.CA2219.severity = error
+dotnet_diagnostic.CA2201.severity = error
+dotnet_diagnostic.CA2208.severity = error
+dotnet_diagnostic.CA2211.severity = error
+dotnet_diagnostic.CA2225.severity = error
+dotnet_diagnostic.CA2226.severity = error
+dotnet_diagnostic.CA2241.severity = error
+dotnet_diagnostic.CA2243.severity = error
+dotnet_diagnostic.CA2253.severity = error
+dotnet_diagnostic.CA2254.severity = error
+dotnet_diagnostic.CA1853.severity = error
+dotnet_diagnostic.CA1823.severity = error
+dotnet_diagnostic.CA1806.severity = error
+dotnet_diagnostic.CA1708.severity = error
+dotnet_diagnostic.CA1710.severity = error
+dotnet_diagnostic.CA1711.severity = error
+dotnet_diagnostic.CA1715.severity = error
+dotnet_diagnostic.CA1721.severity = error
+dotnet_diagnostic.CA1063.severity = error
+dotnet_diagnostic.CA1018.severity = error
+dotnet_diagnostic.CA1019.severity = error
+dotnet_diagnostic.CA1024.severity = error
+dotnet_diagnostic.CA1040.severity = silent
+dotnet_diagnostic.CA1041.severity = error
+dotnet_diagnostic.CA1044.severity = error
+dotnet_diagnostic.CA1045.severity = error
+dotnet_diagnostic.CA1050.severity = error
+dotnet_diagnostic.CA1051.severity = error
+dotnet_diagnostic.CA1054.severity = error
+dotnet_diagnostic.CA1055.severity = error
+dotnet_diagnostic.CA1056.severity = error
+dotnet_diagnostic.CA1061.severity = error
+dotnet_diagnostic.CA1064.severity = error
+dotnet_diagnostic.CA1065.severity = error
 
 [*.cs]
 csharp_indent_labels = one_less_than_current
@@ -530,3 +569,14 @@ csharp_style_prefer_extended_property_pattern = true:suggestion
 csharp_style_var_for_built_in_types = false:silent
 csharp_style_var_when_type_is_apparent = false:silent
 csharp_style_var_elsewhere = false:silent
+dotnet_diagnostic.CA2234.severity = error
+dotnet_diagnostic.CA2244.severity = error
+dotnet_diagnostic.CA2246.severity = error
+dotnet_diagnostic.CA1820.severity = error
+dotnet_diagnostic.CA1841.severity = error
+dotnet_diagnostic.CA1825.severity = error
+dotnet_diagnostic.CA1812.severity = error
+dotnet_diagnostic.CA1802.severity = error
+dotnet_diagnostic.ASP0000.severity = error
+[*.vb]
+dotnet_diagnostic.CA1047.severity = error
