--- a/docker-postgres.yml
+++ b/docker-postgres.yml
@@ -1,22 +1,18 @@
 version: "3"
 services:
   postgres:
-    image: postgres:alpine
-    command: postgres -c 'max_connections=2000'
-    networks:
-        - bruno
+    image: postgres:15-alpine
+    command: postgres -c log_statement=all
     ports:
-        - 5432:5432
+      - 5432:5432
     volumes:
-        - postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
     environment:
-        POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: admin
-        POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: postgres
     restart: always
-
-networks:
-  bruno:
 
 volumes:
   postgres-data:
+    driver: local
